[build-system]

    requires = ["setuptools"]
    build-backend = "setuptools.build_meta"

[project]

    name = "rivet-transpiler"
    description = "Rivet Transpiler "
    version = "1.0.3"
    requires-python = ">= 3.9"
    dependencies = [
        "qiskit == 0.44.1",
        "qiskit-aer == 0.12.2",
        "rustworkx >= 0.13.1"
    ]

[project.optional-dependencies]

    bqskit = ["bqskit == 1.1.0"]

    pytket = ["pytket == 1.21.0",
              "pytket-qiskit == 0.45.0"]

    stacks = ["rivet-transpiler[bqskit]",
              "rivet-transpiler[pytket]"]

    testing = ["pytest >= 7.4.3",
               "coverage >= 7.3.2"]

[tool.setuptools.packages.find]

    include = ["rivet_transpiler"]

[tool.pytest.ini_options]

    filterwarnings = [
        "ignore::DeprecationWarning",
        "ignore::PendingDeprecationWarning"]
