[build-system]

    requires = ["setuptools"]
    build-backend = "setuptools.build_meta"

[project]

    name = "rivet-transpiler"
    description = "Rivet Transpiler provides a family of functions for efficient transpilation of quantum circuits."
    readme = "README.md"
    authors = [{ name = "Haiqu Inc.", email = "info@haiqu.ai" }]
    license = { file = "LICENSE" }
    version = "1.0.10"
    requires-python = ">= 3.10"
    dependencies = [
        "qiskit <= 1.0.2",
        "qiskit_ibm_runtime >= 0.22.0",
        "rustworkx >= 0.14.2"
    ]
    keywords = [
        "rivet",
        "transpile",
        "transpiler",
        "quantum",
        "quantum circuit",
        "quantum computing",
        "quantum programming language",
    ]
    classifiers = [
        "Environment :: Console",
        "Intended Audience :: Developers",
        "Intended Audience :: Science/Research",
        "License :: OSI Approved :: Apache Software License",
        "Operating System :: MacOS",
        "Operating System :: Microsoft :: Windows",
        "Operating System :: POSIX :: Linux",
        "Programming Language :: Python :: 3 :: Only",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Topic :: Scientific/Engineering",
    ]

[project.urls]
    Homepage = "https://github.com/haiqu-ai/rivet"

[project.optional-dependencies]

    bqskit = ["bqskit >= 1.1.1"]

    pytket = ["pytket >= 1.26.0",
              "pytket-qiskit >= 0.51.0"]

    testing = ["pytest >= 7.4.3",
               "coverage >= 7.3.2",
			   "qiskit-aer <= 0.13.3"]

    stacks = ["rivet-transpiler[bqskit]",
              "rivet-transpiler[pytket]"]

    all = ["rivet-transpiler[stacks]",
           "rivet-transpiler[testing]",
           "matplotlib"]

[tool.setuptools.packages.find]

    include = ["rivet_transpiler"]

[tool.pytest.ini_options]

    filterwarnings = [
        "ignore::DeprecationWarning",
        "ignore::PendingDeprecationWarning"]
